--- a/secao-6/svg-sprite-boilerplate/package.json
+++ b/secao-6/svg-sprite-boilerplate/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "gulp-svg-sprite": "^1.5.0"
   }
 }
